--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,7 @@ plugins:
 
 title: Documentación
 
-nombres: Nombres y Apellidos
+nombres: Juan Camilo Hernandez Lopera
 submodulo: Lógica de Programación
 periodo: 2023-2
-url_foto: https://firebasestorage.googleapis.com/v0/b/cesde-7fe22.appspot.com/o/Documentaci%C3%B3n%20Evidencias%2Ffoto_estudiante.jpeg?alt=media&token=28549a1e-d53f-4eae-a82d-5ab00adfaf2b
-
+url_foto: https://firebasestorage.googleapis.com/v0/b/logica-de-progrmacion.appspot.com/o/camiloh.png?alt=media&token=6d0e7e11-46f6-4ae2-8421-e534afac49d8
